--- a/style.css
+++ b/style.css
@@ -13,27 +13,51 @@ body {
 }
 
 #header {
-    margin: 0 auto;
+    margin: 40px auto;
     width: 720px;
     text-align: center;
     color: white;
 }
 
-#survey-form {
-    margin: 0 auto;
-    width: 600px;
+#header h1 {
+    font-size: 36px;
+    margin: 0;
+}
+
+#header p {
+    font-style: italic;
+    margin: 0;
+}
+
+#form-gral {
+    box-sizing: border-box;
+    width: 540px;
+    margin: 0 auto;    
     background-color: rgb(27, 27, 50, 0.7);
-    padding: 40px;
     border-radius: 20px;
+    padding: 40px 0;
+}
+
+#survey-form {
+    box-sizing: border-box;
+    margin: 0 auto;
+    width: 540px;
+    padding: 0 40px;
+    
     color: white
 }
 
-#form-group {
-    margin: 20px 0;
+#form-group p {
+    font-size: 18px;
+    margin: 0;
 }
 
-#form-group label {
+#form-group label, p {
     padding-bottom: 10px;
+}
+
+#form-group span {
+    font-size: 14px;
 }
 
 #form-input {
@@ -42,11 +66,46 @@ body {
     width: 100%;
     font-size: 16px;
     padding: 8px;
+    margin-bottom: 25px;
+}
+
+#name, #email, #number {
+    box-sizing: border-box;
+    width: 100%;
+    font-size: 16px;
+    padding: 5px;
+}
+
+
+#dropdown {
+    box-sizing: border-box;
+    width: 100%;
+    font-size: 16px;
+    padding: 5px;
+}
+
+#form-group {
+    margin-bottom: 10px
 }
 
 #form-group label {
     display: flex;
     font-size: 18px;
+}
+
+#form-group .input-checkbox {
+    width: 25px;
+    margin-right: 10px;
+}
+
+#input-radio {
+    width: 25px;
+    margin-right: 10px;
+}
+
+#text-area p {
+    font-size: 18px;
+    margin: 0;
 }
 
 #submit {
@@ -57,5 +116,6 @@ body {
     color: white;
     padding: 10px;
     margin: 25px 0;
+    border: none;
+    border-radius: 5px;
 }
-
